# stickies

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.pt-BR.md  build-appimage.sh  dictionaries.qrc  main.cpp  spell_highlighter.cpp  spell_highlighter.h  stickie_card.cpp  stickie_card.h  stickie_manager.cpp  stickie_manager.h  stickies.desktop
